wubi (13.04) UNRELEASED; urgency=low

  [ Howard Chan ]
  * Added Ubuntu Studio option into Wubi (LP: #1070682)
  * Changed code in /src/wubi/backends/common/distro.py to make Wubi not
    replacing the correct distro name with the wrong one (LP: #1080090)  

  [ Colin Watson ]
  * Bump to 13.04.

 -- Howard Chan <smartboyhw@gmail.com>  Sat, 17 Nov 2012 22:48:01 +0800

wubi (12.10) quantal; urgency=low

  [ Evan Dandrea ]
  * Version bump to 12.10 (Quantal).
  * Drop Wubi for Xubuntu at the request of Pasi Lallinaho.

  [ Colin Watson ]
  * Update translations from Launchpad.
  * Adjust isolist.ini to reflect the move of Kubuntu releases to
    cdimage.ubuntu.com in 12.04.
  * Add support for Tibetan.

 -- Evan Dandrea <ev@ubuntu.com>  Wed, 06 Jun 2012 14:54:06 +0100

wubi (12.04) precise; urgency=low

  [ bcbc ]
  * Correct NameError exceptions on missing attributes
    when running CD boot helper or a CD is rejected (LP: #876154).
  * Ignore Permission denied when copying wubildr everywhere
    (LP: #862003)
  * Don't fail if Windows' startup folder is missing or mis-
    configured (LP: #910948)
  * If bcdedit fails when uninstalling, it shouldn't be fatal
    (LP: #925779)
  * Don't use the diskimage download when the target 
    partition is FAT32 (LP: #882393).
  * Suppress "No Disk" popup errors for unsupported devices.
    Thanks to William Bass for the patch (LP: #365881).

  [ Evan Dandrea ]
  * Remove partially downloaded files that Windows does not consider
    files when the bit torrent tracker falls over (LP: #873268).
  * Don't assume success if the disk image download fails without
    raising an exception (LP: #924752).
  * Hide Wubi from the autorun page, per LP: #975251.
  * Do not use the CD by default if we are not running Wubi from that
    same CD.
  * Remove the minimum ISO size check. This will fail on USB disks
    written into ISOs as part of the CD boot helper. It's not entirely