@@ -120,26 +120,26 @@ metalink2=http://cdimage.ubuntu.com/lubuntu/daily-live/current/raring-desktop-am
 website=http://lubuntu.net
 ordering=7
 
-[Ubuntu-Studio-i386]
+[Ubuntu Studio-i386]
 min_iso_size=1500000000
 max_iso_size=3500000000
 min_disk_space_mb=10000
 min_memory_mb=512
 arch=i386
-name=Ubuntu-Studio
+name=Ubuntu Studio
 packages=ubuntustudio-desktop
 metalink=http://cdimage.ubuntu.com/ubuntustudio/releases/13.04/release/ubuntustudio-13.04-dvd-i386.metalink
 metalink2=http://cdimage.ubuntu.com/ubuntustudio/dvd/current/raring-dvd-i386.metalink
 website=http://ubuntustudio.org
 ordering=8
 
-[Ubuntu-Studio-amd64]
+[Ubuntu Studio-amd64]
 min_iso_size=1500000000
 max_iso_size=3500000000
 min_disk_space_mb=10000
 min_memory_mb=512
 arch=amd64
-name=Ubuntu-Studio
+name=Ubuntu Studio
 packages=ubuntustudio-desktop
 metalink=http://cdimage.ubuntu.com/ubuntustudio/releases/13.04/release/ubuntustudio-13.04-dvd-amd64.metalink
 metalink2=http://cdimage.ubuntu.com/ubuntustudio/dvd/current/raring-dvd-amd64.metalink
